     If "PSKReporter" appears anywhere in the ADIF being loaded it would be rejected entirely


Call Roster -> Watcher: Fixed display of compound callsign matches in Msg column
App: Settings -> General: Multiple IPs supported in 'Forwared UDP Messages' (comma separated)

App: Fixed crash on startup on Windows system when no text-2-speech available (Thanks PU8REG)
Map: Right-Click empty grid info now shows all DXCC grids associated
Logging: ACLog: Fixed issue with incorrect band info from 70cm and above
Mac: Cmd-Q now exits the application



App: Updated Electron engine to 35.7.0
      (Windows users should double-check firewall settings after installation)
App: Multiple GridTracker instance support using --gt-name=UniqueName
Logging: WSJT-X source renamed to "App Log(s)" .. all WSJT-X/JTDX log file locations searched at startup
      (Then disable the ones you don't want to load, this is for multiple GT instance support)
Logging: LoTW: Will now queue failed uploads and retry on next QSO
Logging: Any 1x1 QSO in the US over 15 days not considered worked for hunting purposes
Logging: MacOS no longer allows third-party apps to find installed apps, will use known install locations
        /Applications/TrustedQSL/tqsl.app
        /Applications/tqsl.app
        ~/Applications/TrustedQSL/tqsl.app
        ~/Applications/tqsl.app
        ~/Desktop/TrustedQSL/tqsl.app
        ~/Desktop/tqsl.app
        ~/Applications/Ham Radio/TrustedQSL/tqsl.app
        ~/Applications/Ham Radio/tqsl.app
Call Roster: Due to complaints 1x1 US Special Callsign highlighting removed
      (Use the watcher -> Callsign Regex  ^[KNW][0-9][A-W|Y|Z]$ to replicate)


App: 
  Fixed mouse stutter/system slowing issue:
    Removed the rarely used and expensive to maintain Off-Air Message Service (OAMS)


Map: Upgrade to OpenLayers map library 10.6.0
Logging: LoTW: Use temp directory for LoTW queue file
Lookups: Fixed county bug on repeated cache hits

### Fixed


### Removed


[unreleased]: 